mobile layout fixed alignment

--- a/portfolio/Views/timeline-section.css
+++ b/portfolio/Views/timeline-section.css
@@ -12,20 +12,22 @@
   background-color: greenyellow;
   margin-bottom: 20rem;
   padding: 20px;
+  position: absolute;
 }
 
 .timeline-year {
     font-size: 1.5rem;
-    margin-left: 5rem;
 }
 
 .timeline-text {
     font-size: 1.2rem;
     line-height: 1.3rem;
-    text-align: left;
+    /* text-align: left; */
     margin-left: 5rem;
-    border: 1px solid black;
+    margin-right: 10rem;
+    border: 1px dashed black;
 }
+
 
 .timeline-title {
     font-size: 1.5rem;
